@@ -122,6 +122,8 @@ Version 1.11.6+dev:
    * Added command line option "--multiplayer-repeat <arg>".
      A game started with --multiplayer will be repeated <arg> times.
      This is useful for batch testing.
+   * Animation WML: Fix sound start time in additional frames without
+     requiring a duration 1 frame workaround.
 
 Version 1.11.6:
  * Add-ons client:
